--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,18 +4,61 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
 
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
         {% block stylesheets %}
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        <link rel="stylesheet" href="src\css\styleTemplate.css">
         {% endblock %}
 
     </head>
+
+      <div class="container-fluid">
     <body>
-        {% block menu %}
+        {% block header %}
+        <div class="row">
+      		<div class="col-md-12">
+      			<h1 class="text-center">
+      				ProStages
+      			</h1>
+      		</div>
+      	</div>
         {% endblock %}
-        
+
+        {% block menu %}
+        <div class="row">
+      		<div class="col-md-12">
+      			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+      				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+      					<span class="navbar-toggler-icon"></span>
+      				</button>
+      				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      					<ul class="navbar-nav">
+                  <li class="nav-item">
+      							 <a class="nav-link" href="#">Link</a>
+      						</li>
+                  <li class="nav-item">
+      							 <a class="nav-link" href="#">Link</a>
+      						</li>
+      						<li class="nav-item">
+      							 <a class="nav-link" href="#">Link</a>
+      						</li>
+      					</ul>
+      					<ul class="navbar-nav ml-md-auto">
+      					</ul>
+      				</div>
+      			</nav>
+      		</div>
+      	</div>
+        {% endblock %}
+
         {% block body %}
         {% endblock %}
 
         {% block javascripts %}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
         {% endblock %}
+
+        </div>
     </body>
 </html>
