--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,8 @@
 
         {% block stylesheets %}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-        <link rel="stylesheet" href="src\css\styleTemplate.css">
+        <!--link rel="stylesheet" href="public/style.css"-->
+        <link href="{{ asset('style.css') }}" type="text/css" rel="stylesheet">
         {% endblock %}
 
     </head>
@@ -35,13 +36,13 @@
       				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       					<ul class="navbar-nav">
                   <li class="nav-item">
-      							 <a class="nav-link" href="#">Link</a>
+      							 <a class="nav-link" href="#">Filtrer par formation</a>
       						</li>
                   <li class="nav-item">
-      							 <a class="nav-link" href="#">Link</a>
+      							 <a class="nav-link" href="#">Filtrer par entreprise</a>
       						</li>
       						<li class="nav-item">
-      							 <a class="nav-link" href="#">Link</a>
+      							 <a class="nav-link" href="#">aucun filtre</a>
       						</li>
       					</ul>
       					<ul class="navbar-nav ml-md-auto">
