--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,13 +36,13 @@
       				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       					<ul class="navbar-nav">
                   <li class="nav-item">
-      							 <a class="nav-link" href="#">Filtrer par formation</a>
+      							 <a class="nav-link" href="F:\dut\Symfony\ProStage\templates\pro_stage\afficherParFormations.html.twig">Filtrer par formation</a>
       						</li>
                   <li class="nav-item">
-      							 <a class="nav-link" href="#">Filtrer par entreprise</a>
+      							 <a class="nav-link" href="F:\dut\Symfony\ProStage\templates\pro_stage\afficherParEntreprises.html.twig">Filtrer par entreprise</a>
       						</li>
       						<li class="nav-item">
-      							 <a class="nav-link" href="#">aucun filtre</a>
+      							 <a class="nav-link" href="F:\dut\Symfony\ProStage\templates\pro_stage\index.html.twig">aucun filtre</a>
       						</li>
       					</ul>
       					<ul class="navbar-nav ml-md-auto">
