affichage des stage sur la page d'acceuil

--- a/templates/pro_stage/index.html.twig
+++ b/templates/pro_stage/index.html.twig
@@ -3,4 +3,13 @@
 
 {% block body %}
 <h1> Cette page affichera tout sans filtre </h1>
+{% set debutNouvelleLigne = true %}
+
+<table>
+    {% for stage in stages %}
+    <tr>
+      <td><a class="stage" href="{{ path('descriptionStage',{'id': stage.id}) }}">{{stage.intitule}}</a></td>
+    </tr>
+    {% endfor %}
+</table>
 {% endblock %}
