--- a/public/style.css
+++ b/public/style.css
@@ -3,3 +3,17 @@
     margin: auto;
     text-align: center
 }
+
+table {
+ border-width:1px;
+ border-style:solid;
+ border-color:black;
+ width:50%;
+ margin: auto;
+ }
+td {
+ border-width:1px;
+ border-style:solid;
+ border-color:black;
+ width:50%;
+ }
