affichage de la page d'acceuil et de description des stages

--- a/templates/pro_stage/afficherDescriptifStage.html.twig
+++ b/templates/pro_stage/afficherDescriptifStage.html.twig
@@ -1,5 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<h1> Cette page affichera le descriptif du stage ayant pour identifiant {{idStage}} </h1>
+<h1> Cette page affichera le descriptif du stage ayant pour identifiant {{stage.id}} </h1>
+
+<h1> {{stage.intitule}} </h1>
+
+<p> {{stage.mission}} </p>
+
+<p> {{stage.adresseMail}} </p>
+
 {% endblock %}
