--- a/templates/pro_stage/index.html.twig
+++ b/templates/pro_stage/index.html.twig
@@ -2,7 +2,7 @@
 
 
 {% block body %}
-<h1> Cette page affichera tout sans filtre </h1>
+<h1> Cette page affichera la liste des stages </h1>
 {% set debutNouvelleLigne = true %}
 
 <table>
