--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,7 +36,7 @@
       				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       					<ul class="navbar-nav">
                   <li class="nav-item">
-      							 <a class="nav-link" href="{{ path('formations') }}">Filtrer par formation</a>
+      							 <a class="nav-link" href="{{ path('formations') }}">formations</a>
       						</li>
                   <li class="nav-item">
       							 <a class="nav-link" href="{{ path('entreprises') }}">Filtrer par entreprise</a>
