affichage des listes d'entreprises et de formations

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -39,10 +39,10 @@
       							 <a class="nav-link" href="{{ path('formations') }}">formations</a>
       						</li>
                   <li class="nav-item">
-      							 <a class="nav-link" href="{{ path('entreprises') }}">Filtrer par entreprise</a>
+      							 <a class="nav-link" href="{{ path('entreprises') }}">entreprises</a>
       						</li>
       						<li class="nav-item">
-      							 <a class="nav-link" href="{{ path('pro_stage') }}">aucun filtre</a>
+      							 <a class="nav-link" href="{{ path('pro_stage') }}">tout les stages</a>
       						</li>
       					</ul>
       					<ul class="navbar-nav ml-md-auto">
