--- a/templates/pro_stage/afficherFormations.html.twig
+++ b/templates/pro_stage/afficherFormations.html.twig
@@ -2,4 +2,13 @@
 
 {% block body%}
 <h1> Cette page affichera la liste des formations de l'IUT </h1>
+
+
+<ul>
+  {% for formation in formations %}
+    <li> {{formation.nom}} </li>
+  {% endfor %}
+</ul>
+
+
 {% endblock %}
