--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,10 +29,7 @@
         {% block menu %}
         <div class="row">
       		<div class="col-md-12">
-      			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-      				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-      					<span class="navbar-toggler-icon"></span>
-      				</button>
+      			<nav class="navbar navbar-expand-lg navbar-light bg-light" id="barre">
       				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       					<ul class="navbar-nav">
                   <li class="nav-item">
