--- a/templates/pro_stage/afficherEntreprises.html.twig
+++ b/templates/pro_stage/afficherEntreprises.html.twig
@@ -5,7 +5,7 @@
 
 <ul>
   {% for stage in stages %}
-    <li> {{stage.entreprises.nom}} </li>
+    <li><a class="entreprise" href="{{ path('stagesParEntreprise',{'nomEntreprise': stage.entreprises.nom}) }}">{{stage.entreprises.nom}}</a></li>
   {% endfor %}
 </ul>
 
