--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,6 +41,9 @@
       						<li class="nav-item">
       							 <a class="nav-link" href="{{ path('pro_stage') }}">tout les stages</a>
       						</li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="{{ path('ajouterEntreprise') }}">ajouter une entreprise</a>
+                  </li>
       					</ul>
       					<ul class="navbar-nav ml-md-auto">
       					</ul>
