formulaire ajout et modification d'entreprie

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -53,6 +53,11 @@
       	</div>
         {% endblock %}
 
+        <center>
+        {% block titre %}
+        {% endblock %}
+        <center/>
+
         {% block body %}
 
         {% endblock %}
