verification coté serveur pour ajout d'entreprise et externalisation du formulaire

--- a/templates/pro_stage/ajouterModifierEntreprise.html.twig
+++ b/templates/pro_stage/ajouterModifierEntreprise.html.twig
@@ -1,12 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block titre %}
 
+{% block titre %}
+<center>
 {% if action == "ajouter" %}
-Ajout d'une entreprise 
+Ajout d'une entreprise
 {% else %}
 Modification d'une entreprise
 {% endif %}
+<center/>
+
 {% endblock %}
 
 {% block body %}
