--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,6 +44,9 @@
                   <li class="nav-item">
                      <a class="nav-link" href="{{ path('ajouterEntreprise') }}">ajouter une entreprise</a>
                   </li>
+                  <li class="nav-item">
+                     <a class="nav-link" href="{{ path('ajouterStage') }}">ajouter un stage</a>
+                  </li>
       					</ul>
       					<ul class="navbar-nav ml-md-auto">
       					</ul>
@@ -53,7 +56,7 @@
       	</div>
         {% endblock %}
 
-      
+
         {% block titre %}
         {% endblock %}
 
