ajout d'une authentification http avec mot de passe encodé

--- a/templates/pro_stage/ajouterModifierEntreprise.html.twig
+++ b/templates/pro_stage/ajouterModifierEntreprise.html.twig
@@ -20,6 +20,7 @@ Modification d'une entreprise
   <p>{{ form_row ( vueFormulaireEntreprise.activite, {'attr':{'placeholder':"activite de l'entreprise"}})}}<p/>
   <p>{{ form_row ( vueFormulaireEntreprise.adresse, {'attr':{'placeholder':"adresse complète de l'entreprise"}})}}<p/>
   <p>{{ form_row ( vueFormulaireEntreprise.site, {'attr':{'placeholder':"site Internet de l'entreprise"}})}}<p/>
+  <button type="submit"> valider </button>
 {{ form_end ( vueFormulaireEntreprise )}}
 <center/>
 
