--- a/templates/pro_stage/ajouterModifierStage.html.twig
+++ b/templates/pro_stage/ajouterModifierStage.html.twig
@@ -10,6 +10,7 @@
   <p>{{ form_row ( vueFormulaireStage.adresseMail, {'attr':{'placeholder':"adresse mail"}})}}</p>
     <p>{{ form_row ( vueFormulaireStage.entreprises, {'label':"entreprise"})}}</p>
     <p>{{ form_row ( vueFormulaireStage.formations, {'label':"Type de formation"})}}</p>
+    <button type="submit"> valider </button>
 {{ form_end ( vueFormulaireStage )}}
 </center>
 
