mise en place du systeme d'authentification et du formulaire d'inscription

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 #bs-example-navbar-collapse-1{
-    width: 17%;
+    width: 25%;
     margin: auto;
     text-align: center
 }
@@ -21,4 +21,10 @@ td {
 
 #barre{
   background-color: #909698;
+}
+
+.log
+{
+
+
 }
