--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,14 @@
       <div class="container-fluid">
     <body>
         {% block header %}
+        {% if is_granted('ROLE_USER') %}
+        <a class="log" href="{{path('app_logout')}}" style="float:right;"> deconnexion</a>
+        </br >
+        <p style="float:right;">{{ app.user.prenom }} {{ app.user.nom }}</p>
+        </br >
+        {% else %}
+        <a class="log" href="{{path('app_login')}}" style="float:right;">Connexion</a>
+        {% endif %}
         <div class="row">
       		<div class="col-md-12">
       			<h1 class="text-center">
@@ -25,6 +33,7 @@
       		</div>
       	</div>
         {% endblock %}
+
 
         {% block menu %}
         <div class="row">
@@ -47,6 +56,9 @@
                   <li class="nav-item">
                      <a class="nav-link" href="{{ path('ajouterStage') }}">ajouter un stage</a>
                   </li>
+                  <li class="nav-item">
+
+                  </li>
       					</ul>
       					<ul class="navbar-nav ml-md-auto">
       					</ul>
@@ -55,7 +67,6 @@
       		</div>
       	</div>
         {% endblock %}
-
 
         {% block titre %}
         {% endblock %}
@@ -70,5 +81,6 @@
         {% endblock %}
 
         </div>
+
     </body>
 </html>
