--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}connectez vous{% endblock %}
 
 {% block body %}
 <form method="post">
@@ -14,12 +14,13 @@
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <h1 class="h3 mb-3 font-weight-normal">connecter vous</h1>
     <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" required autofocus>
-    <label for="inputPassword">Password</label>
+    <br />
+    <label for="inputPassword">mot de passe</label>
     <input type="password" name="password" id="inputPassword" class="form-control" required>
-
+    <br />
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
@@ -34,9 +35,10 @@
             </label>
         </div>
     #}
-
+    <a  href="{{ path('app_inscription') }}">vous n'êtes pas inscrit?</a>
+    </br></br>
     <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
+        se connecter
     </button>
 </form>
 {% endblock %}
